test/corpus/block.txt
=====|||
List
=====|||
- one
- two
- three

---|||
(document
  (list
	(bullet)
	(text)
	(bullet)
	(text)
	(bullet)
	(text)))

=====|||
Numbered List
=====|||
1. one
2. two
3. three

---|||
(document
  (numbered_list
	(index)
	(text)
	(index)
	(text)
	(index)
	(text)))

=====|||
Todo List
=====|||
[ ] unchecked
[v] checked
[x] cancelled

---|||
(document
  (todo_list
	(square_open)
	(blank)
	(square_close)
	(text)
	(square_open)
	(v)
	(square_close)
	(text)
	(square_open)
	(x)
	(square_close)
	(text)))

=====|||
Code Block
=====|||
---
print("hello world")
---

---|||
(document
  (code_block
	(fence_open)
	(code_content)
	(fence_close)))

=====|||
Labeled Code Block
=====|||
--- python
print("hello world")
---

---|||

(document
  (code_block_lang
	(fence_open)
	(code_lang)
	(code_content)
	(fence_close)))


=====|||
Blockquote
=====|||
/ blockquote

---|||
(document
  (blockquote
	(slash)
	(text)))
